Document optional client ZGC for DH stutter